sublime-gulp.log
Remember that you can report errors and get help in https://github.com/NicoSantangelo/sublime-gulp

07-09-2018 15:42:
C:\Users\Киев\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:31
        throw ex;
        ^

Error: Cannot find module 'gulp'
    at Function.Module._resolveFilename (module.js:547:15)
    at Function.Module._load (module.js:474:25)
    at Module.require (module.js:596:17)
    at require (internal/module.js:11:18)
    at Object.<anonymous> (D:\work\Frontend_HTML_CSS_Standard\.sublime-gulp-tmp.js:1:76)
    at Module._compile (module.js:652:30)
    at Object.Module._extensions..js (module.js:663:10)
    at Module.load (module.js:565:32)
    at tryModuleLoad (module.js:505:12)
    at Function.Module._load (module.js:497:3)


07-09-2018 15:42:
C:\Users\Киев\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:31
        throw ex;
        ^

Error: Cannot find module 'gulp'
    at Function.Module._resolveFilename (module.js:547:15)
    at Function.Module._load (module.js:474:25)
    at Module.require (module.js:596:17)
    at require (internal/module.js:11:18)
    at Object.<anonymous> (D:\work\Frontend_HTML_CSS_Standard\.sublime-gulp-tmp.js:1:76)
    at Module._compile (module.js:652:30)
    at Object.Module._extensions..js (module.js:663:10)
    at Module.load (module.js:565:32)
    at tryModuleLoad (module.js:505:12)
    at Function.Module._load (module.js:497:3)


07-12-2018 10:51:
D:\work\Frontend_HTML_CSS_Standard\.sublime-gulp-tmp.js:279
    ['copy', 'html', 'svg-sprite-build', 'sprite' 'img'],
                                                  ^^^^^

SyntaxError: Unexpected string
    at createScript (vm.js:80:10)
    at Object.runInThisContext (vm.js:139:10)
    at Module._compile (module.js:616:28)
    at Object.Module._extensions..js (module.js:663:10)
    at Module.load (module.js:565:32)
    at tryModuleLoad (module.js:505:12)
    at Function.Module._load (module.js:497:3)
    at Module.require (module.js:596:17)
    at require (internal/module.js:11:18)
    at requireGulp (C:\Users\Киев\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:28:16)
